Added new image pdp banner CART page

--- a/snippets/pdp__discount.liquid
+++ b/snippets/pdp__discount.liquid
@@ -5,10 +5,10 @@
             align-items: center;
             width: 100%;
             border: 1px solid #e6e6e6;
-            {%- if template != 'cart' -%}
+            {% if template != 'cart' %}
             margin-top: 30px;
             margin-bottom: 30px;
-            {%- endif -%}
+            {% endif %}
             padding-bottom: 0;
           }
     </style>
