Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1364,9 +1364,7 @@
                             </svg></span><span class="footer__contact-caption">@quezzle_com</span></a>
                 </div>
                 <div class="footer__top-col">
-                    <div class="footer__title">Contacts</div><a class="footer__contact" href="tel:+74951093075" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--phone">
-                                <use xlink:href="#phone"></use>
-                            </svg></span><span class="footer__contact-caption">+7 (495) 109 30 75</span></a><a class="footer__contact" href="mailto:care@unidragon.com" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--email">
+                    <div class="footer__title">Contacts</div><a class="footer__contact" href="mailto:care@unidragon.com" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--email">
                                 <use xlink:href="#email"></use>
                             </svg></span><span class="footer__contact-caption">care@unidragon.com</span></a>
                 </div>
