Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1237,9 +1237,7 @@
                                 {% endform %}
                             <div class="answers__contacts">
                                 <h3 class="answers__contacts-title">Still have questions? </h3>
-                                <p class="answers__contacts-label">Contact us:</p><a class="answers__contact" href="tel:+74951093075" target="_blank" rel="nofollow noopener"><span class="answers__contact-icon"><svg class="svg-icon svg-icon--phone">
-                                            <use xlink:href="#phone"></use>
-                                        </svg></span><span class="answers__contact-caption">+7 (495) 109 30 75</span></a><a class="answers__contact" href="mailto:care@unidragon.com" target="_blank" rel="nofollow noopener"><span class="answers__contact-icon"><svg class="svg-icon svg-icon--email">
+                                <p class="answers__contacts-label">Contact us:</p><a class="answers__contact" href="mailto:care@unidragon.com" target="_blank" rel="nofollow noopener"><span class="answers__contact-icon"><svg class="svg-icon svg-icon--email">
                                             <use xlink:href="#email"></use>
                                         </svg></span><span class="answers__contact-caption">care@unidragon.com</span></a>
                             </div>
