Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -221,7 +221,7 @@
                                 <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">{{variant_1.compare_at_price | money}}</p>
                                 <p class="product__price">{{variant_1.price | money}}</p>
-                                <button id="AddToCart" class="button product__button-buy button--blue" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
+                                <button class="button product__button-buy button--blue AddToCart" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
                             </div>
                         </div>
                         <div class="product product--2 order__item">
@@ -256,7 +256,7 @@
                                 <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">{{variant_234.compare_at_price | money}}</p>
                                 <p class="product__price">{{variant_234.price | money}}</p>
-                                <button class="button product__button-buy button--blue" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
+                                <button class="button product__button-buy button--blue AddToCart" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
                             </div>
                         </div>
                         <div class="product product--3 order__item">
@@ -290,7 +290,7 @@
                             <div class="product__order">
                                 <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">{{variant_set.compare_at_price | money}}</p>
-                                <p class="product__price">{{variant_set.price | money}}</p><button class="button product__button-buy" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
+                                <p class="product__price">{{variant_set.price | money}}</p><button class="button product__button-buy AddToCart" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
                             </div>
                         </div>
                     </div>
@@ -993,7 +993,7 @@
                                 <div class="kit__right">
                                     <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">{{variant_1.compare_at_price | money}}</p>
-                                    <p class="kit__price">{{variant_1.price | money}}</p><button class="button kit__button-buy button--blue" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
+                                    <p class="kit__price">{{variant_1.price | money}}</p><button class="button kit__button-buy button--blue AddToCart" type="button" data-variant-id="{{variant_1.id}}"><span class="button__caption">Buy</span></button>
                                 </div>
                             </div>
                         </div>
@@ -1022,7 +1022,7 @@
                                 <div class="kit__right">
                                     <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">{{variant_234.compare_at_price | money}}</p>
-                                    <p class="kit__price">{{variant_234.price | money}}</p><button class="button kit__button-buy button--blue" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
+                                    <p class="kit__price">{{variant_234.price | money}}</p><button class="button kit__button-buy button--blue AddToCart" type="button" data-variant-id="{{variant_234.id}}"><span class="button__caption">Buy</span></button>
                                 </div>
                             </div>
                         </div>
@@ -1053,7 +1053,7 @@
                                 <div class="kit__right">
                                     <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">{{variant_set.compare_at_price | money}}</p>
-                                    <p class="kit__price">{{variant_set.price | money}}</p><button class="button kit__button-buy" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
+                                    <p class="kit__price">{{variant_set.price | money}}</p><button class="button kit__button-buy AddToCart" type="button" data-variant-id="{{variant_set.id}}"><span class="button__caption">Buy</span></button>
                                 </div>
                             </div>
                         </div>
@@ -1412,9 +1412,7 @@
     </div>
 </div>
 <script>
-  $('.product__button-buy').on('click', addToCart(e));
-  $('.kit__button-buy').on('click', addToCart(e));
-  function addToCart(e){    
+  $('.AddToCart').on('click', function (e){    
     e.preventDefault();
     let formData = {
      'items': [{
@@ -1441,7 +1439,7 @@
       console.error('Error:', error);
     });
   
- }
+ });
   </script>
 {% schema %}
 {
