Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1412,7 +1412,7 @@
     </div>
     <div class="popup popup--added mfp-hide lazy-bg" id="popup-added">
         <div class="popup__icon-ok"><svg class="svg-icon svg-icon--ok">
-                <use xlink:href="assets/img/sprite.svg#ok"></use>
+                <use xlink:href="#ok"></use>
             </svg></div>
         <div class="popup__box">
             <p class="popup__message">Product added to cart</p>
