Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1416,7 +1416,73 @@
             </svg></div>
         <div class="popup__box">
             <p class="popup__message">Product added to cart</p>
-            <div class="popup__buttons-wrapper"><button class="button popup__button js-popup-close button--white" type="button"><span class="button__caption">Back</span></button><a class="button popup__button js-popup button--blue" href="/cart" role="button"><span class="button__caption">Go to cart</span></a></div>
+            <div class="popup__buttons-wrapper"><button class="button popup__button js-popup-close button--white" type="button"><span class="button__caption">Back</span></button><a class="button popup__button js-popup button--blue" href="#popup-cart" role="button"><span class="button__caption">Go to cart</span></a></div>
+        </div>
+    </div>
+    <div class="popup popup--cart mfp-hide" id="popup-cart"><button class="popup__btn-close js-popup-close" type="button" title="Закрыть"></button>
+        <div class="cart lazy-bg">
+            <div class="cart__top">
+                <h2 class="cart__title">Корзина</h2>
+                <div class="cart__items">
+                    <div class="cart__item hidden" data-product-id="1" data-price="2490"><button class="cart__item-remove" type="button" aria-label="Удалить из корзины"><svg class="svg-icon svg-icon--close">
+                                <use xlink:href="assets/img/sprite.svg#close"></use>
+                            </svg></button>
+                        <div class="cart__item-image">
+                            <picture>
+                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-1.webp 1x, assets/img/products/product-1@2x.webp 2x" type="image/webp" />
+                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-1.png 1x, assets/img/products/product-1@2x.png 2x" type="image/png" /><img class="lazy" src="assets/img/placeholder.png" data-src="assets/img/products/product-1.png 1x, assets/img/products/product-1@2x.png 2x" width="413" height="268" alt="Часть 1 из 4" />
+                            </picture>
+                        </div>
+                        <div class="cart__item-captions">
+                            <div class="cart__item-title">Часть 1&nbsp;из&nbsp;4</div>
+                            <div class="cart__item-subtitle">Ознакомьтесь с&nbsp;базовыми механиками Quezzle</div>
+                        </div>
+                        <div class="field field--type-quantity cart__item-quantity">
+                            <div class="field__field"><button class="field__minus" type="button"></button><input type="number" name="quantity" value="1" min="1" step="1" /><button class="field__plus" type="button"></button></div>
+                        </div>
+                        <div class="cart__item-total"><span class="cart__item-total-value">2 490</span> ₽</div>
+                    </div>
+                    <div class="cart__item hidden" data-product-id="2" data-price="6990"><button class="cart__item-remove" type="button" aria-label="Удалить из корзины"><svg class="svg-icon svg-icon--close">
+                                <use xlink:href="assets/img/sprite.svg#close"></use>
+                            </svg></button>
+                        <div class="cart__item-image">
+                            <picture>
+                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-2.webp 1x, assets/img/products/product-2@2x.webp 2x" type="image/webp" />
+                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-2.png 1x, assets/img/products/product-2@2x.png 2x" type="image/png" /><img class="lazy" src="assets/img/placeholder.png" data-src="assets/img/products/product-2.png 1x, assets/img/products/product-2@2x.png 2x" width="413" height="268" alt="Часть 2, 3 и 4" />
+                            </picture>
+                        </div>
+                        <div class="cart__item-captions">
+                            <div class="cart__item-title">Часть&nbsp;2, 3&nbsp;и&nbsp;4</div>
+                            <div class="cart__item-subtitle">Докупите до&nbsp;полного набора и&nbsp;начинайте основной квест</div>
+                        </div>
+                        <div class="field field--type-quantity cart__item-quantity">
+                            <div class="field__field"><button class="field__minus" type="button"></button><input type="number" name="quantity" value="1" min="1" step="1" /><button class="field__plus" type="button"></button></div>
+                        </div>
+                        <div class="cart__item-total"><span class="cart__item-total-value">6 990</span> ₽</div>
+                    </div>
+                    <div class="cart__item hidden" data-product-id="3" data-price="7990"><button class="cart__item-remove" type="button" aria-label="Удалить из корзины"><svg class="svg-icon svg-icon--close">
+                                <use xlink:href="assets/img/sprite.svg#close"></use>
+                            </svg></button>
+                        <div class="cart__item-image">
+                            <picture>
+                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-3.webp 1x, assets/img/products/product-3@2x.webp 2x" type="image/webp" />
+                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-3.png 1x, assets/img/products/product-3@2x.png 2x" type="image/png" /><img class="lazy" src="assets/img/placeholder.png" data-src="assets/img/products/product-3.png 1x, assets/img/products/product-3@2x.png 2x" width="413" height="268" alt="Полный набор" />
+                            </picture>
+                        </div>
+                        <div class="cart__item-captions">
+                            <div class="cart__item-title">Полный набор</div>
+                            <div class="cart__item-subtitle">Все 4&nbsp;части откроют сюжетную линию&nbsp;&mdash; квест из&nbsp;12&nbsp;шагов</div>
+                        </div>
+                        <div class="field field--type-quantity cart__item-quantity">
+                            <div class="field__field"><button class="field__minus" type="button"></button><input type="number" name="quantity" value="1" min="1" step="1" /><button class="field__plus" type="button"></button></div>
+                        </div>
+                        <div class="cart__item-total"><span class="cart__item-total-value">7 990</span> ₽</div>
+                    </div>
+                </div>
+            </div>
+            <div class="cart__bottom">
+                <div class="cart__summary"><span class="cart__summary-label">Сумма заказа</span><span class="cart__summary-total"><span class="cart__summary-total-value">0</span> ₽</span></div><button class="button cart__button disabled button--blue" type="button" data-popup="#popup-order"><span class="button__caption">Оформить заказ</span></button>
+            </div>
         </div>
     </div>
 </div>
